--- a/VRbadominton/Assembly-CSharp-Editor.csproj
+++ b/VRbadominton/Assembly-CSharp-Editor.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\OVR\Moonlight\Editor\OVRMoonlightLoader.cs" />
      <None Include="Assets\Plugins\Android\assets\placeholder.txt" />
      <None Include="Assets\OVR\Moonlight\Shaders\OVRColorRampAlpha.shader" />
+     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\OVR\Moonlight\Shaders\Unlit Crosshair.shader" />
      <None Include="Assets\OVR\Moonlight\Resources\Unlit Transparent Color.shader" />
  <Reference Include="UnityEditor.Advertisements">
