--- a/VRbadominton/Assembly-CSharp.csproj
+++ b/VRbadominton/Assembly-CSharp.csproj
@@ -79,6 +79,7 @@
      <Compile Include="Assets\Scripts\RacketController.cs" />
      <None Include="Assets\Plugins\Android\assets\placeholder.txt" />
      <None Include="Assets\OVR\Moonlight\Shaders\OVRColorRampAlpha.shader" />
+     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\OVR\Moonlight\Shaders\Unlit Crosshair.shader" />
      <None Include="Assets\OVR\Moonlight\Resources\Unlit Transparent Color.shader" />
  <Reference Include="UnityEngine.UI">
